 * Navigation (Z) will now work with ground and naval units (it doesn't avoid slag though so be careful)
 * Units controlled by the player turn instantly, toggleable in settings
 * Fixed a bug with logic virus detection
 * Fixed a bug where spectating a very small or large position would break the game
 * Navigation now navigates around blue tiles in the flood gamemode
 * Probably more stuff I forgot

# Version 7.2.1
 * Fixed dialogs being weird
 * Added timestamps to tile hud as well as the tile info menu
 * Added enemy spawns as pathfinding obstacles
 * Increased the number of items displayed on the tilehud to 7 to make it line up with the minimap
 * Moved away from old discord presence library
 * Added partial Russian support (thanks to thedimas3007)

# Version 7.2.0
 * Fixed the unlock all achievements button
 * Fixed the mono font disable option not disabling it everywhere
 * Fixed join messages spamming on world load
 * Fixed the message block networking system not working at all
 * Fixed break tile logs
 * Disabled the mono font by default when the game is being run in a language other than english (some characters aren't in the font)
 * Added a !networking command to check the status of client networking
 * Removed the map markers button in the campaign to make room for the planet map button

# Version 7.1.0
 * Made client networking 190x faster via the use of microprocessors (processors can now be configured for networking instead of just message blocks)
 * Fixed a tile log crash

# Version 7.0
 * Completely redid tile logs (they now properly keep track of block replacements, configuration changes, and multiblock)
 * Added a basic map marker system (!marker [x] [y] <name>, can also be accessed by a button next to core database and schematics)
 * Persistent plans can now be cancelled with Q
 * Massively improved plan persistence, they will now appear instantly on respawn and should work better when swapping units super fast
 * Plans persist through /sync